--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
 
 
     <!-- text -->
+    <dimen name="large_text">24sp</dimen>
     <dimen name="medium_text">20sp</dimen>
     <dimen name="small_text">16sp</dimen>
 
