--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,59 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/default_medium_margin">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/name_text_view"
-        android:layout_width="0dp"
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="contact"
+            type="com.example.konturtest.data.database.entity.Contact" />
+
+        <variable
+            name="view_model"
+            type="com.example.konturtest.screen.contacts.ContactListViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:lines="1"
-        android:textColor="@color/blackText"
-        android:textSize="@dimen/medium_text"
-        app:layout_constraintEnd_toStartOf="@id/vertical_separator"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Vartldfj dlfjslajfldskjf sfjlsdj ldfjdlsjfljsdlfjsdlfj" />
-
-    <TextView
-        android:id="@+id/phone_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_small_margin"
-        android:ellipsize="end"
-        android:lines="1"
-        android:textColor="@color/blackText"
-        android:textSize="@dimen/small_text"
-        app:layout_constraintEnd_toStartOf="@id/vertical_separator"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_text_view"
-        tools:text="+7(8823)3493849384948" />
-
-    <TextView
-        android:id="@+id/height_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:gravity="end"
-        android:lines="1"
-        android:textColor="@color/blackText"
-        android:textSize="@dimen/small_text"
-        app:layout_constraintBottom_toBottomOf="@id/name_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/vertical_separator"
-        app:layout_constraintTop_toTopOf="@id/name_text_view"
-        tools:text="923424.343dddddddddddddd4" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_separator"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:onClick="@{() -> view_model.openContactDetails(contact.id)}"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7" />
+        android:padding="@dimen/default_medium_margin">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/name_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="@{contact.name}"
+            android:textColor="@color/blackText"
+            android:textSize="@dimen/medium_text"
+            app:layout_constraintEnd_toStartOf="@id/vertical_separator"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Vartldfj dlfjslajfldskjf sfjlsdj ldfjdlsjfljsdlfjsdlfj" />
+
+        <TextView
+            android:id="@+id/phone_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_small_margin"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="@{contact.phone}"
+            android:textColor="@color/blackText"
+            android:textSize="@dimen/small_text"
+            app:layout_constraintEnd_toStartOf="@id/vertical_separator"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/name_text_view"
+            tools:text="+7(8823)3493849384948" />
+
+        <TextView
+            android:id="@+id/height_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="end"
+            android:lines="1"
+            android:text="@{contact.height.toString()}"
+            android:textColor="@color/blackText"
+            android:textSize="@dimen/small_text"
+            app:layout_constraintBottom_toBottomOf="@id/name_text_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/vertical_separator"
+            app:layout_constraintTop_toTopOf="@id/name_text_view"
+            tools:text="923424.343dddddddddddddd4" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/vertical_separator"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</layout>
