--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -12,69 +12,70 @@
             type="com.example.konturtest.screen.details.ContactDetailsViewModel" />
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/default_medium_margin">
+        android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="@dimen/default_medium_margin">
 
+            <TextView
+                android:id="@+id/name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@={view_model.name}"
+                android:textColor="@color/blackText"
+                android:textSize="@dimen/large_text"
+                tools:text="Vasiliy Mironov" />
 
+            <TextView
+                android:id="@+id/phone_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_medium_margin"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@={view_model.phone}"
+                android:textSize="@dimen/small_text"
+                tools:text="+7 (902) 244 20 30" />
 
-        <TextView
-            android:id="@+id/name_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:lines="1"
-            android:text="@={view_model.name}"
-            android:textColor="@color/blackText"
-            android:textSize="@dimen/large_text"
-            tools:text="Vasiliy Mironov" />
+            <TextView
+                android:id="@+id/temperament_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_medium_margin"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@={view_model.temperament}"
+                android:textSize="@dimen/small_text"
+                tools:text="Choleric" />
 
-        <TextView
-            android:id="@+id/phone_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_medium_margin"
-            android:ellipsize="end"
-            android:lines="1"
-            android:text="@={view_model.phone}"
-            android:textSize="@dimen/small_text"
-            tools:text="+7 (902) 244 20 30" />
+            <TextView
+                android:id="@+id/edu_period_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_medium_margin"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@{view_model.startEducation + `  -  ` + view_model.endEducation}"
+                android:textSize="@dimen/small_text"
+                tools:text="231 33 23 - 313 31 11" />
 
-        <TextView
-            android:id="@+id/temperament_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_medium_margin"
-            android:ellipsize="end"
-            android:lines="1"
-            android:text="@={view_model.temperament}"
-            android:textSize="@dimen/small_text"
-            tools:text="Choleric" />
-
-        <TextView
-            android:id="@+id/edu_period_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_medium_margin"
-            android:ellipsize="end"
-            android:lines="1"
-            android:text="@{view_model.startEducation + `  -  ` + view_model.endEducation}"
-            android:textSize="@dimen/small_text"
-            tools:text="231 33 23 - 313 31 11" />
-
-        <TextView
-            android:id="@+id/bio_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_medium_margin"
-            android:text="@={view_model.biography}"
-            android:textColor="@color/blackText"
-            android:textSize="@dimen/small_text"
-            tools:text="Lorem ipsum " />
-
-    </LinearLayout>
-
+            <TextView
+                android:id="@+id/bio_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_medium_margin"
+                android:text="@={view_model.biography}"
+                android:textColor="@color/blackText"
+                android:textSize="@dimen/small_text"
+                tools:text="Lorem ipsum " />
+        </LinearLayout>
+    </ScrollView>
+    
 </layout>
