--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -34,6 +34,7 @@
                 tools:text="Vasiliy Mironov" />
 
             <TextView
+                android:autoLink="phone"
                 android:id="@+id/phone_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
