--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -41,7 +41,19 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+        <TextView
+            android:layout_marginTop="@dimen/default_medium_margin"
+            android:visibility="@{ view_model.contactsData.isEmpty() ? View.VISIBLE : View.GONE}"
+            android:text="@string/empty_contacts_text"
+            app:layout_constraintTop_toBottomOf="@id/progress_bar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="@dimen/medium_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <ProgressBar
+            android:id="@+id/progress_bar"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:visibility="@{view_model.isLoading ? View.VISIBLE : View.GONE}"
